--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "eslint": "^3.1.0"
+    "eslint": "^3.1.0",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2"
   }
 }
